Revision history for Hailo

{{$NEXT}}

0.32 2010-03-19 12:00:22

    - t/storage/dbd-options.t wasn't updated to take into account the
      renaming of modules done in 0.31. It would fail on machines that
      didn't have an older version of Hailo installed when running
      `make test'.

    - t/hailo/non_standard_plugin.t whines with `Issuing rollback()
      due to DESTROY without explicit disconnect()' on some systems
      since it doesn't use the Hailo::Test framework.

      Issuing rollbacks at the right time is an open issue with
      Hailo. I haven't been able to make it do the right thing by
      sprinkling around destructors in the main code, that'll cause
      things to be destroyed prematurely (probably some silly race
      condition).

    - Re-add Data::Section dependency. We need it for the
      Words-utf8-text.t test.

0.31 2010-03-18 21:45:25

    - Optimization and cleanup release. Hailo is now much much
      snappier and eats less memory. Here's how long it takes to run
      the test suite before/after 0.30:

                      s/iter   0.30 Hailo    0.31 Hailo
        0.30 Hailo      20.2           --          -16%
        0.31 Hailo      16.9          19%            --

    - Split out Hailo::Storage::* into Hailo::Engine::* and
      Hailo::Storage::*. This makes it possible to write pluggable
      engines again (that ability was removed in 0.09). It's the
      intent to write a XS version of the Default engine to make Hailo
      even faster.

    - In addition the storage backends have been moved
      around. Hailo::Storage::DBD is now just Hailo::Storage and
      DBD::Pg, DBD::mysql and DBD::SQLite are now directly under the
      Hailo::Storage namespace as Hailo::Storage::PostgreSQL,
      Hailo::Storage::MySQL and Hailo::Storage::SQLite.

      For now "Pg" and "mysql" as short names for the storage backends
      are supported for backwards compatability but this support may
      be removed in a future release.
